--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"@codemirror/language": "^6.10.1",
+		"emoji": "^0.3.2"
 	}
 }
